# File-INI-Project

./: CIniFile.cpp  CIniFile.h  CMakeLists.txt  Key.h  LICENSE.md  README.md  TestCIniFile.cpp  ini_test.ini  main.cpp
Files/: ini_file.ini  ini_test.ini
Files/Test/: changedFilename.ini  ini_test.ini
